--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,9 +5,47 @@
 {% endblock title %}
 
 {% block body %}
+     <center><h1>Welcome to your Chat room</h1></center>
+     <a href="{{ url_for('logout') }}">Press here to logout</a>
      <div class="forBody1">
+          <div class="forBody">
+           <form method="POST" action="">
+               {{ form.hidden_tag() }}
+               {{ form.userSearch() }}
+               {{ form.submit() }}
+       
+       
+           </form>
+     {% if flag==0 %}
 
-      <h1>Welcome to your Chat room</h1>
+        {% if previousChatList|length == 0 %}
+        <div>
+          no previous chat history!! search for user and chat with them!!:)
+        </div>
+        {% else %}
+         {% for i in previousChatList %}
+         <a href="/chatroom/{{i}}" type="button">{{ i }}</a>
+         <br>
+         {% endfor %}
+             
+        {% endif %}
+          
+     {% else %}
+
+     {% if userList|length == 0 %}
+        <div>
+          no match found :(
+        </div>
+     {% else %}
+
+         {% for i in userList %}
+         <a href="/chatroom/{{i}}" type="button">{{ i }}</a>
+         <br>
+         {% endfor %}
+             
+     {% endif %}
+          
+     {% endif %}
     <a href="{{ url_for('logout') }}">Press here to logout</a>
      </div>
 {% endblock body %}
