--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,6 +6,8 @@
 
 {% block body %}
      <center><h1>Welcome to your Chat room</h1></center>
+     <a href="{{ url_for('dashboard') }}">Reload</a>
+     <br>
      <a href="{{ url_for('logout') }}">Press here to logout</a>
      <div class="forBody1">
           <div class="forBody">
@@ -46,6 +48,12 @@
      {% endif %}
           
      {% endif %}
+
+     <br>
+     <br>
+     <a href="{{ url_for('dashboard') }}">Reload</a>
+     <p></p>
+     <p></p>
     <a href="{{ url_for('logout') }}">Press here to logout</a>
      </div>
 {% endblock body %}
