--- a/redis-chat-app-with-flask-master/templates/chat.html
+++ b/redis-chat-app-with-flask-master/templates/chat.html
@@ -9,12 +9,12 @@
       {% for i in activeChatList %}
 
           {% if loop.index-1 in rightIndent %}
-              <div style="margin-left: 200px; width: 300px; background-color:aquamarine; color: black">
+              <div style="margin-left: 200px;">
                 <p>{{ i }}</p>
               </div>
 
           {% else %}
-           <div style="width: 300px; background-color: white; color: black">
+           <div>
           <p>{{ i }}</p>
           </div>
 
@@ -25,7 +25,6 @@
     
 {% endif %}
 
-<div id="myLiveChatList"></div>
 <pre id="out"></pre>
 <p>Message: <input id="in" /></p>
 <a href="{{ url_for('dashboard') }}" style="color: white;">your chat rooms</a>
@@ -34,8 +33,6 @@
     function sse() {
         var source = new EventSource('/stream');
         var out = document.getElementById('out');
-        // out.style.backgroundColor = 'black';
-        // out.style.marginLeft = '0px';
         source.onmessage = function(e) {
             console.log(e.data)
             let message = e.data
@@ -52,35 +49,17 @@
             if (userTexting == compareString){
                 // console.log("here!!")
                 let finalmessage= userTexting + " " +date +" :\n"+ m ;
-                // out.innerHTML =  out.innerHTML+ "\n" + finalmessage;
-                // out.style.backgroundColor = 'white';
-                // out.style.marginLeft = '0px';
-                var x = document.createElement("PRE");
-                var t = document.createTextNode(finalmessage);
-                x.style.backgroundColor = 'white';
-                // x.style.marginLeft = '200px';
-                x.style.color = 'black';
-                x.style.width = '300px'
-                x.appendChild(t);
-                document.getElementById("myLiveChatList").appendChild(x);
+                out.innerHTML =  out.innerHTML+ "\n" + finalmessage;
             }
             else {
                 // let date = message.slice(0, indexBracket-1);
                 // let m = userAndMessage.slice(indexColon+2);
-                let finalmessage= userTexting + " " +date +" :\n"+ m ;
+                let finalmessage= userTexting + " " +date +" :\n\t\t\t"+ m ;
                 // console.log("m: " + m );
                 // console.log(" user: " + userTexting)
                 // console.log(" date: " + date);
-                // out.innerHTML =  out.innerHTML+ "\n" + finalmessage;
-            
-                var x = document.createElement("PRE");
-                var t = document.createTextNode(finalmessage);
-                x.style.backgroundColor = 'aquamarine';
-                x.style.marginLeft = '200px';
-                x.style.color = 'black';
-                x.style.width = '300px'
-                x.appendChild(t);
-                document.getElementById("myLiveChatList").appendChild(x);
+            out.innerHTML =  out.innerHTML+ "\n\t\t\t" + finalmessage;
+            }
 
         };
     }
@@ -92,5 +71,4 @@
         }
     });
     sse();
-}
 </script>
