--- a/templates/base.html
+++ b/templates/base.html
@@ -7,25 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style.css"> <!-- linking css -->
-    <title> {% block title %}
+    <!-- <link rel="stylesheet" href="../static/style12.css"> linking css -->
+    <!-- <style> -->
+       {% block styleTemp %}
         
-    {% endblock title %} </title>
+        {% endblock styleTemp %}  
+    <!-- </style> -->
+    <title> 
+    {% block title %}
+        
+    {% endblock title %} 
+  </title>
   </head>
+  
   <body>
-    <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
-            <h4 class="text-white">Collapsed content</h4>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-          </div>
-        </div>
-        <nav class="navbar navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </nav>
-      </div>
+    
     {% block body %}
         
     {% endblock body %}
