--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,95 @@
-{% extends 'base.html' %}
+{% block styleTemp %}
+<style>
 
-{% block title %}
-    Login
-{% endblock title %}
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-size: cover;
+    /* background-color: #36096d;
+    background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%); */
+	background-color: #20bf55;
+background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
+}
+.form-holder {
+	width: 100%;
+	max-width: 400px;
+	padding: 20px;
+	background: rgba(220,220,220, .5);
+	border-radius: 15px;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.form-holder h3 {
+    margin-top: 2px;
+    font-size: 45px;
+    font-weight: 200;
+    letter-spacing: 3px;
+    text-shadow: 1px 1px 2px black;
+    color: black;
+
+  }
+.form-holder input {
+	display: block;
+	width: 100%;
+	background: rgba(240,240,240, .5);
+	border: none;
+	font-size: 16px;
+	padding: 15px;
+	outline: none;
+	border-radius: 40px;
+	color: #555;
+	margin: 20px auto;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.form-holder button {
+	display: block;
+	width: 100%;
+	background: #2E2E3A;
+	border: none;
+	font-size: 16px;
+	padding: 15px;
+	outline: none;
+	border-radius: 40px;
+	color: #fff;
+	margin: 20px auto;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.form-holder button:hover {
+	opacity: .8;
+}
+
+.form-holder img {
+	width: 100px;
+	display: block;
+	margin: 10px auto;
+	opacity: .7;
+}
+</style>
+
+{% endblock styleTemp %} 
 
 {% block body %}
-   <div class="forBody">
-    <h1>Login Page</h1>
+
+<div class="form-holder" >
+    <h3>Login</h3>
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         {{ form.username() }}
         {{ form.password() }}
         {{ form.submit() }}
-
-
     </form>
-
     <a href="{{ url_for('signUp') }}">Don't have an account? sign up</a><br>
-    <a href="/">Home</a>
-
-
-   </div>
-    
+</div>
+ 
 {% endblock body %}
