--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,6 @@
   }
   
   section .btnone {
-    /*background: #00b894;*/
     background: #fff;
     color: #000;
   }
@@ -117,15 +116,12 @@
 
 <div style="background-color: #05e8ba;background-image: linear-gradient(315deg, #05e8ba 0%, #087ee1 74%); background-repeat: no-repeat;
 background-size: cover;background-attachment: fixed ;width: 100%;height: 90vh;display: flex;justify-content: center;align-items: center;text-align: center;color: whitesmoke;">
-	<!-- background-color: #20bf55;
-background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%); -->
-<!-- background-color: #36096d;
-background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%); -->
+
 		    <section >
 
 			<h3>Welcome To ChatSpace</h3> <br><br>
-			<a href="{{ url_for('login') }}" class="btnone">Login</a>
-            <a href="{{ url_for('signUp') }}" class="btntwo">Sign Up</a>
+			<a href="{{ url_for('login') }}" class="btnone">Login</a> <!--login input-->
+            <a href="{{ url_for('signUp') }}" class="btntwo">Sign Up</a> <!--Sign Up input-->
 		</div>
 		</section>
 </div>
