--- a/templates/login.html
+++ b/templates/login.html
@@ -14,8 +14,6 @@ body {
 	align-items: center;
 	height: 100vh;
 	background-size: cover;
-    /* background-color: #36096d;
-    background-image: linear-gradient(315deg, #36096d 0%, #37d5d6 74%); */
 	background-color: #20bf55;
 background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
 }
@@ -85,9 +83,9 @@ background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
     <h3>Login</h3>
     <form method="POST" action="">
         {{ form.hidden_tag() }}
-        {{ form.username() }}
-        {{ form.password() }}
-        {{ form.submit() }}
+        {{ form.username() }} <!--username input-->
+        {{ form.password() }} <!--password input-->
+        {{ form.submit() }} <!--submit button-->
     </form>
     <a href="{{ url_for('signUp') }}">Don't have an account? sign up</a><br>
 </div>
